--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodlands",
+  "name": "mapifood",
   "version": "0.0.1",
   "author": "Coder Team",
   "homepage": "https://ionicframework.com/",
