--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
+    "@angular/animations": "^10.0.9",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
@@ -50,7 +51,7 @@
     "moment": "^2.24.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-pipes": "^2.6.0",
-    "ngx-spinner": "^9.0.0",
+    "ngx-spinner": "^8.1.0",
     "onesignal-cordova-plugin": "^2.8.2",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
